samples/_failures_safe/1761603992_3854d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82479d25.c: In function ‘main’:
./samples/SAFE/__tmp_82479d25.c:162:21: error: expected declaration or statement at end of input
  162 |                     state_machine_handle_event(&sm, EVENT_ERROR);
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_82479d25.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82479d25.c:162:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82479d25.c:162:21: error: expected declaration or statement at end of input
